--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -10,19 +10,29 @@ body {
   grid-template-columns: 1fr 1fr;
 }
 
-.action-button {
-  margin: 0 10px;
-  padding: 10px;
+.button {
+  margin: 10px;
+  padding: 8px;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 13px;
+}
+
+.button--primary {
   background-color: var(--primaryBtn);
   border: 1px solid var(--primaryBtn);
   color: var(--darkFont);
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s;
 }
 
-.action-button:hover {
-  background-color: var(--primaryAccent);
+.button--danger {
+  background-color: var(--dangerBtn);
+  border: 1px solid var(--dangerAccent);
+  color: var(--white);
+}
+
+.button:hover {
+  box-shadow: 1px 1px 1px var(--black);
 }
 
 .content {
