--- a/assets/styles/variables.css
+++ b/assets/styles/variables.css
@@ -3,8 +3,13 @@
   --gray: #dddddd;
   --black: #222831;
   --darkBlue: #30475e;
+
   --primaryBtn: #6f9eaf;
   --primaryAccent: #6795a4;
+
+  --dangerBtn: #c44444;
+  --dangerAccent: #c35e5e;
+
   --darkFont: #292929;
   --darkFontAccent: #404040;
 }
