--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -44,13 +44,13 @@ body {
   margin: 0 auto;
 }
 
-.coordinates__set-values {
+.coordinates__set-container {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.coordinates__set-values > label {
+.coordinates__set-container > label {
   margin: 0 15px;
 }
 
